<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LTDD_W03</string>
    <string name="action_settings">Settings</string>
    <string name="text_for_buttons">LTDD Nhom 23: Vu Tran Kien &amp; Hoang Van Thien</string>
    <string name="button_normal">Alarm</string>
    <string name="content_des">des</string>
    <string name="texts">Email</string>
    <string name="edittext_hint">enter your email</string>
    <string name="radios_desc_text">Radio Buttons</string>
    <string name="RadioButton1">Yes</string>
    <string name="RadioButton2">Maybe</string>
    <string name="RadioButton3">No</string>
    <string name="checkboxes_desc_text">Check  boxes</string>
    <string name="checkbox1">one</string>
    <string name="checkbox2">two</string>
    <string name="checkbox3">four</string>
    <string name="bitmask">bitmask</string>
    <string name="edittext_file_hint">Text to write to file</string>
    <string name="button_load_internal">Load internal file</string>
    <string name="button_write_internal">Write internal file</string>

</resources>