<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/text_for_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_for_buttons" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_for_buttons"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonsPressed"
            android:text="@string/button_normal" />

        <ImageButton
            android:id="@+id/image_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_des"
            android:onClick="onButtonsPressed"
            android:src="@drawable/ic_launcher" />

        <Button
            android:id="@+id/button_with_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_lock_idle_alarm"
            android:drawablePadding="5dp"
            android:onClick="onButtonsPressed"
            android:text="@string/button_normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons"
        android:text="@string/texts" />

    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/texts"
        android:hint="@string/edittext_hint"
        android:maxLines="1" />

    <TextView
        android:id="@+id/radios_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext"
        android:text="@string/radios_desc_text" />

    <RadioGroup
        android:id="@+id/RadioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radios_desc"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onRadiosClicked"
            android:text="@string/RadioButton1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadiosClicked"
            android:text="@string/RadioButton2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadiosClicked"
            android:text="@string/RadioButton3" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_for_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/RadioGroup1"
        android:layout_below="@id/RadioGroup1"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/checkboxes_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_for_edittext"
        android:text="@string/checkboxes_desc_text" />

    <LinearLayout
        android:id="@+id/checkboxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkboxes_desc"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onCheckboxesClick"
            android:tag="1"
            android:text="@string/checkbox1" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onCheckboxesClick"
            android:tag="2"
            android:text="@string/checkbox2" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onCheckboxesClick"
            android:tag="4"
            android:text="@string/checkbox3" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkboxes"
        android:layout_below="@+id/checkboxes"
        android:textIsSelectable="true" />

    <EditText
        android:id="@+id/edittext_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_summary"
        android:layout_below="@+id/text_summary"
        android:ems="10"
        android:hint="@string/edittext_file_hint"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/internal_file_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edittext_file"
        android:layout_below="@+id/edittext_file" >

        <Button
            android:id="@+id/button_load_internal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonsPressed"
            android:text="@string/button_load_internal" />

        <Button
            android:id="@+id/button_write_internal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonsPressed"
            android:text="@string/button_write_internal" />
    </LinearLayout>

</RelativeLayout>